--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,6 +20,8 @@ jobs:
       uses: actions/checkout@v2
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag ${DOCKER_TAG}
+    - name: Docker Login
+      run: docker login -u ${{secrets.DOCKER_USR}} -p ${secrets.DOCKER_TKN}}
     - name: Execute Clair scan
       uses: the-iron-bank-of-braavos/clair@main
       with:
