--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,7 +12,7 @@ jobs:
   
     env:
       DOCKER_TAG: theironbank:latest
-      CLAIR_REPORT: clair-report.jsom
+      CLAIR_REPORT: clair-report.json
 
     runs-on: ubuntu-latest
 
@@ -30,7 +30,7 @@ jobs:
       uses: the-iron-bank-of-braavos/clair@fix/local-and-remote
       with:
         updater: ubuntu
-        report_path: ${{env.CLAIR_REPORT}}
+        report_path: clair-report.json
         report_format: json
         image: ${{env.DOCKER_TAG}}
 
@@ -38,4 +38,4 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: clair-result
-        path: ${{env.CLAIR_REPORT}}
+        path: clair-report.json
