--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -30,15 +30,12 @@ jobs:
       uses: the-iron-bank-of-braavos/clair@fix/local-and-remote
       with:
         updater: ubuntu
-        report_path: ${GITHUB_WORKSPACE}/clair-report.json
-        report_format: json
+        report_path: clair-report.xml
+        report_format: 'xml'
         image: ${{env.DOCKER_TAG}}
 
-    - name: List report
-      run: ls -la ${GITHUB_WORKSPACE}
-      
     - name: Store the report
       uses: actions/upload-artifact@v2
       with:
         name: clair-result
-        path: ${GITHUB_WORKSPACE}/clair-report.json
+        path: clair-report.xml
