--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -42,6 +42,7 @@ jobs:
         
     - name: Publish Scan Report
       uses: benauca/publish-clair-report@main
-      if: always() # always run even if the previous step fails
       with:
         report_paths: 'clair-report.json'
+        severity_level: 'Unknown'
+        
