--- a/.github/workflows/remote-docker-image-scan.yml
+++ b/.github/workflows/remote-docker-image-scan.yml
@@ -12,7 +12,7 @@ jobs:
     name: Clair Scan
   
     env:
-      DOCKER_TAG: theironbank:latest
+      DOCKER_TAG: vulnerables/web-dvwa
       CLAIR_REPORT: remote-clair-report
 
     runs-on: ubuntu-latest
@@ -21,23 +21,24 @@ jobs:
 
     - name: Docker login
       run: docker login -u ${{secrets.DOCKER_USR}} -p ${{secrets.DOCKER_TKN}}
+      
     - name: Execute Clair scan
-      uses: the-iron-bank-of-braavos/clair@a83906924cd0f4cbc8285d5f500fde1e61b42752
+      uses: the-iron-bank-of-braavos/clair@main
       with:
         updater: debian
-        report_path: ${env.CLAIR_REPORT}.json
+        report_path: ${{env.CLAIR_REPORT}}.json
         report_format: 'json'
         image: ${{env.DOCKER_TAG}}
 
     - name: Store the report
       uses: actions/upload-artifact@v2
       with:
-        name: ${env.CLAIR_REPORT}
-        path: ${env.CLAIR_REPORT}.json
+        name: ${{env.CLAIR_REPORT}}
+        path: ${{env.CLAIR_REPORT}}.json
         
     - name: Publish Scan Report
       uses: benauca/publish-clair-report@10b0daa67fca82001af3c637adde6d2557356d7f
       with:
-        report_paths: ${env.CLAIR_REPORT}.json
+        report_paths: ${{env.CLAIR_REPORT}}.json
         severity_level: 'Unknown'
         
