--- a/.github/workflows/local-docker-image-scan.yml
+++ b/.github/workflows/local-docker-image-scan.yml
@@ -25,7 +25,7 @@ jobs:
       run: docker build . --file Dockerfile --tag ${DOCKER_TAG}
 
     - name: Execute Clair scan
-      uses: the-iron-bank-of-braavos/clair@main
+      uses: santander-group/clair-scan-action@1.0.0
       with:
         updater: debian
         report_path: ${{env.CLAIR_REPORT}}.json
