--- a/.github/workflows/local-docker-image-scan.yml
+++ b/.github/workflows/local-docker-image-scan.yml
@@ -43,4 +43,5 @@ jobs:
       with:
         report_paths: '${{env.CLAIR_REPORT}}.json'
         severity_level: 'Unknown'
+        check_name: 'local-report'
         
