--- a/.github/workflows/ubuntu-local.yml
+++ b/.github/workflows/ubuntu-local.yml
@@ -14,7 +14,7 @@ jobs:
     env:
       DOCKER_TAG: "ubuntu:14.04"
       CLAIR_UPDATER: "ubuntu"
-      CLAIR_REPORT: clair-report
+      CLAIR_REPORT: "local-ubuntu-clair-report"
 
     runs-on: ubuntu-latest
 
@@ -44,4 +44,6 @@ jobs:
       with:
         report_paths: '${{env.CLAIR_REPORT}}.json'
         severity_level: 'Unknown'
+        check_name: 'ubuntu-local-report'
+        
         
