--- a/.github/workflows/remote-docker-image-scan.yml
+++ b/.github/workflows/remote-docker-image-scan.yml
@@ -112,3 +112,38 @@ jobs:
         report_paths: ${{env.CLAIR_REPORT}}.json
         severity_level: 'Unknown'
         check_name: '${{env.CLAIR_REPORT}}'
+
+  clair-scan-centos:
+    name: Clair Scan for centos
+  
+    env:
+      DOCKER_TAG: vulnerables/web-dvwa
+      CLAIR_REPORT: centos-remote-clair-report
+
+    runs-on: centos-latest
+
+    steps:
+    - name: Docker login
+      run: docker login -u ${{secrets.DOCKER_USR}} -p ${{secrets.DOCKER_TKN}}
+      
+    - name: Execute Clair scan
+      uses: santander-group/clair-scan-action@main
+      with:
+        local: "no"
+        updater: RHEL
+        report_path: ${{env.CLAIR_REPORT}}.json
+        report_format: 'json'
+        image: ${{env.DOCKER_TAG}}
+
+    - name: Store the report
+      uses: actions/upload-artifact@v2
+      with:
+        name: ${{env.CLAIR_REPORT}}
+        path: ${{env.CLAIR_REPORT}}.json
+        
+    - name: Publish Scan Report
+      uses: benauca/publish-clair-report@10b0daa67fca82001af3c637adde6d2557356d7f
+      with:
+        report_paths: ${{env.CLAIR_REPORT}}.json
+        severity_level: 'Unknown'
+        check_name: '${{env.CLAIR_REPORT}}'
