improve test cases 3

--- a/.github/workflows/local-docker-image-scan.yml
+++ b/.github/workflows/local-docker-image-scan.yml
@@ -13,7 +13,7 @@ jobs:
   
     env:
       DOCKER_TAG: theironbank:debian-latest
-      CLAIR_REPORT: debian-clair-report
+      CLAIR_REPORT: local-debian-clair-report
 
     runs-on: ubuntu-latest
 
@@ -50,7 +50,7 @@ jobs:
   
     env:
       DOCKER_TAG: theironbank:alpine-latest
-      CLAIR_REPORT: alpine-clair-report
+      CLAIR_REPORT: local-alpine-clair-report
 
     runs-on: ubuntu-latest
 
@@ -87,7 +87,7 @@ jobs:
   
     env:
       DOCKER_TAG: theironbank:ubuntu-latest
-      CLAIR_REPORT: ubuntu-clair-report
+      CLAIR_REPORT: local-ubuntu-clair-report
 
     runs-on: ubuntu-latest
 
@@ -102,6 +102,43 @@ jobs:
       uses: santander-group/clair-scan-action@main
       with:
         updater: ubuntu
+        report_path: ${{env.CLAIR_REPORT}}.json
+        report_format: 'json'
+        image: ${{env.DOCKER_TAG}}
+
+    - name: Store the report
+      uses: actions/upload-artifact@v2
+      with:
+        name: ${{env.CLAIR_REPORT}}
+        path: ${{env.CLAIR_REPORT}}.json
+        
+    - name: Publish Scan Report
+      uses: benauca/publish-clair-report@10b0daa67fca82001af3c637adde6d2557356d7f
+      with:
+        report_paths: '${{env.CLAIR_REPORT}}.json'
+        severity_level: 'Unknown'
+        check_name: '${{env.CLAIR_REPORT}}'
+        
+  clair-scan-centos:
+    name: Clair Scan for Centos
+  
+    env:
+      DOCKER_TAG: theironbank:centos-latest
+      CLAIR_REPORT: local-centos-clair-report
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v2
+    
+    - name: Build the Docker image
+      run: docker build . --file centos/Dockerfile --tag ${DOCKER_TAG}
+
+    - name: Execute Clair scan
+      uses: santander-group/clair-scan-action@main
+      with:
+        updater: RHEL
         report_path: ${{env.CLAIR_REPORT}}.json
         report_format: 'json'
         image: ${{env.DOCKER_TAG}}
