change severity level

--- a/.github/workflows/docker-image-scan.yml
+++ b/.github/workflows/docker-image-scan.yml
@@ -258,7 +258,7 @@ jobs:
       uses: benauca/publish-clair-report@10b0daa67fca82001af3c637adde6d2557356d7f
       with:
         report_paths: ${{env.CLAIR_REPORT}}.json
-        severity_level: 'Critical'
+        severity_level: 'High'
         check_name: Report -> '${{env.CLAIR_REPORT}}'
 
   remote-clair-scan-centos:
