--- a/.github/workflows/docker-image-scan.yml
+++ b/.github/workflows/docker-image-scan.yml
@@ -119,12 +119,12 @@ jobs:
         severity_level: 'Critical'
         check_name: Report -> '${{env.CLAIR_REPORT}}'
         
-  local-clair-scan-centos:
-    name: Clair Scan for Centos
+  local-clair-scan-rhel:
+    name: Clair Scan for rhel
     needs: local-clair-scan-ubuntu
     env:
-      DOCKER_TAG: theironbank:centos-latest
-      CLAIR_REPORT: local-centos-clair-report
+      DOCKER_TAG: theironbank:rhel-latest
+      CLAIR_REPORT: local-rhel-clair-report
 
     runs-on: ubuntu-latest
 
@@ -133,7 +133,7 @@ jobs:
       uses: actions/checkout@v2
     
     - name: Build the Docker image
-      run: docker build . --file centos/Dockerfile --tag ${DOCKER_TAG}
+      run: docker build . --file rhel/Dockerfile --tag ${DOCKER_TAG}
 
     - name: Execute Clair scan
       uses: santander-group/clair-scan-action@main
@@ -261,11 +261,11 @@ jobs:
         severity_level: 'High'
         check_name: Report -> '${{env.CLAIR_REPORT}}'
 
-  remote-clair-scan-centos:
-    name: Remote Clair Scan for centos
+  remote-clair-scan-rhel:
+    name: Remote Clair Scan for rhel
     needs: remote-clair-scan-ubuntu
     env:
-      DOCKER_TAG: registry.access.redhat.com/ubi8/openjdk-11:latest
+      DOCKER_TAG: registry.access.redhat.com/rhel7:latest
       CLAIR_REPORT: remote-ubuntu-clair-report
 
     runs-on: ubuntu-latest
