--- a/.github/workflows/docker-image-scan.yml
+++ b/.github/workflows/docker-image-scan.yml
@@ -2,9 +2,7 @@ name: Local docker image scan
 
 on:
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+    branches: [ demo ]
 
 jobs:
 
@@ -45,46 +43,9 @@ jobs:
         severity_level: 'Unknown'
         check_name: Report -> '${{env.CLAIR_REPORT}}'
         
-  local-clair-scan-alpine:
-    name: Local Clair Scan for Alpine
-    needs: local-clair-scan-debian
-    env:
-      DOCKER_TAG: theironbank:alpine-latest
-      CLAIR_REPORT: local-alpine-clair-report
-
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
-    
-    - name: Build the Docker image
-      run: docker build . --file alpine/Dockerfile --tag ${DOCKER_TAG}
-
-    - name: Execute Clair scan
-      uses: santander-group/clair-scan-action@feature/timeout-action-param
-      with:
-        updater: alpine
-        report_path: ${{env.CLAIR_REPORT}}.json
-        report_format: 'json'
-        image: ${{env.DOCKER_TAG}}
-
-    - name: Store the report
-      uses: actions/upload-artifact@v2
-      with:
-        name: ${{env.CLAIR_REPORT}}
-        path: ${{env.CLAIR_REPORT}}.json
-        
-    - name: Publish Scan Report
-      uses: benauca/publish-clair-report@main
-      with:
-        report_paths: '${{env.CLAIR_REPORT}}.json'
-        severity_level: 'Unknown'
-        check_name: Report -> '${{env.CLAIR_REPORT}}'
-
   local-clair-scan-ubuntu:
     name: Local Clair Scan for Ubuntu
-    needs: local-clair-scan-alpine
+    needs: local-clair-scan-debian
     env:
       DOCKER_TAG: theironbank:ubuntu-latest
       CLAIR_REPORT: local-ubuntu-clair-report
@@ -119,45 +80,6 @@ jobs:
         report_paths: '${{env.CLAIR_REPORT}}.json'
         severity_level: 'Unknown'
         check_name: Report -> '${{env.CLAIR_REPORT}}'
-        
-  local-clair-scan-rhel:
-    name: Local Clair Scan for rhel
-    needs: local-clair-scan-ubuntu
-    env:
-      DOCKER_TAG: theironbank:rhel-latest
-      CLAIR_REPORT: local-rhel-clair-report
-
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
-    
-    - name: Build the Docker image
-      run: docker build . --file rhel/Dockerfile --tag ${DOCKER_TAG}
-
-    - name: Execute Clair scan
-      uses: santander-group/clair-scan-action@feature/timeout-action-param
-      with:
-        updater: rhel
-        clair_timeout: 600
-        report_path: ${{env.CLAIR_REPORT}}.json
-        report_format: 'json'
-        image: ${{env.DOCKER_TAG}}
-
-    - name: Store the report
-      uses: actions/upload-artifact@v2
-      with:
-        name: ${{env.CLAIR_REPORT}}
-        path: ${{env.CLAIR_REPORT}}.json
-        
-    - name: Publish Scan Report
-      uses: benauca/publish-clair-report@main
-      with:
-        report_paths: '${{env.CLAIR_REPORT}}.json'
-        severity_level: 'Unknown'
-        check_name: Report -> '${{env.CLAIR_REPORT}}'
-
   remote-clair-scan-debian:
     name: Remote Clair Scan for Debian
   
@@ -193,44 +115,9 @@ jobs:
         severity_level: 'Unknown'
         check_name: Report -> '${{env.CLAIR_REPORT}}'
         
-  remote-clair-scan-alpine:
-    name: Remote Clair Scan for Alpine
-    needs: remote-clair-scan-debian
-    env:
-      DOCKER_TAG: alpine:3.14
-      CLAIR_REPORT: remote-alpine-clair-report
-
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Docker login
-      run: docker login -u ${{secrets.DOCKER_USR}} -p ${{secrets.DOCKER_TKN}}
-      
-    - name: Execute Clair scan
-      uses: santander-group/clair-scan-action@feature/timeout-action-param
-      with:
-        local: "no"
-        updater: alpine
-        report_path: ${{env.CLAIR_REPORT}}.json
-        report_format: 'json'
-        image: ${{env.DOCKER_TAG}}
-
-    - name: Store the report
-      uses: actions/upload-artifact@v2
-      with:
-        name: ${{env.CLAIR_REPORT}}
-        path: ${{env.CLAIR_REPORT}}.json
-        
-    - name: Publish Scan Report
-      uses: benauca/publish-clair-report@main
-      with:
-        report_paths: ${{env.CLAIR_REPORT}}.json
-        severity_level: 'Unknown'
-        check_name: Report -> '${{env.CLAIR_REPORT}}'
-
   remote-clair-scan-ubuntu:
     name: Remote Clair Scan for Ubuntu
-    needs: remote-clair-scan-alpine
+    needs: remote-clair-scan-debian
     env:
       DOCKER_TAG: ubuntu:14.04
       CLAIR_REPORT: remote-ubuntu-clair-report
@@ -247,40 +134,6 @@ jobs:
         clair_timeout: 150
         local: "no"
         updater: ubuntu
-        report_path: ${{env.CLAIR_REPORT}}.json
-        report_format: 'json'
-        image: ${{env.DOCKER_TAG}}
-
-    - name: Store the report
-      uses: actions/upload-artifact@v2
-      with:
-        name: ${{env.CLAIR_REPORT}}
-        path: ${{env.CLAIR_REPORT}}.json
-        
-    - name: Publish Scan Report
-      uses: benauca/publish-clair-report@main
-      with:
-        report_paths: ${{env.CLAIR_REPORT}}.json
-        severity_level: 'Unknown'
-        check_name: Report -> '${{env.CLAIR_REPORT}}'
-
-  remote-clair-scan-rhel:
-    name: Remote Clair Scan for rhel
-    needs: remote-clair-scan-ubuntu
-    env:
-      DOCKER_TAG: registry.access.redhat.com/rhel6:latest
-      CLAIR_REPORT: remote-rhel-clair-report
-
-    runs-on: ubuntu-latest
-
-    steps:
-
-    - name: Execute Clair scan
-      uses: santander-group/clair-scan-action@feature/timeout-action-param
-      with:
-        local: "no"
-        updater: rhel6
-        clair_timeout: 600
         report_path: ${{env.CLAIR_REPORT}}.json
         report_format: 'json'
         image: ${{env.DOCKER_TAG}}
